[package]
name = "label_attribute"
description = "Procedural attribute macro for lhlist"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@gmail.com>"]
edition = "2018"
readme = "../README.md"
license-file = "LICENSE"
repository = "https://github.com/agnes-rs/lhlist"

[features]
default = ["extra-traits"]
extra-traits = []

[lib]
name = "label_attribute"
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = "0.4"

[target.'cfg(feature="extra-traits")'.dependencies]
syn = { version = "0.15", features = ["extra-traits"] }

[target.'cfg(not(feature="extra-traits"))'.dependencies]
syn = "0.15"
